--- a/beast_scheme/index.htm
+++ b/beast_scheme/index.htm
@@ -10,7 +10,6 @@
 <h1 style='position:absolute;top:-10px;left:50%;transform: translate(-50%, 0);font-size:18px;'>Пульт связи и схема Beast</h1>
 </div>
 
-
 Пульт связи с Beast выполнен как сайт на PHP с исполняемым файлом golang, который является продуктом компиляции схемы Beast:
 <li><a href="pult.htm">Пульт связи с Beast</a></li>
 <li><a href="beast.htm">Схема Beast</a></li>
@@ -22,7 +21,7 @@
 На вспомогательных страницах Пульта находятся редакторы параметров организма Beast, редакторы для отдельных стадий развития и задатчик текущей стадии развития. <br>
 Пульт используется для формирования и воспитания адаптивных навыков Beast путем общения с заданием позитивных или негативных стимулов.<br>
 Пульт обеспечивает индикацию состояния Beast и отдельных функций.<br>
-На Пульте есть инструменты работы с Памятью Beast и подскзка "Как использовать Пульт".<br>
+На Пульте есть инструменты работы с Памятью Beast и подсказка "Как использовать Пульт".<br>
 <br>
 Схема Beast написана на языке golang (хотя лучшим языком является rust, пока не имеющей удобный IDE от JetBrains). В ходе разработки пришлось отказаться от многопоточности golang из-за досадной недоделки: паники “одновременного чтения и записи в карту”, чего нет в нормальных языках. <br>Декларировалось, что golang был создан как ученический язык с жесткими наставническими правилами, которые здорово раздражают, но с которыми можно мириться, но такие недоделки как паника при работе с картами и отсутствие возможности повторного включения пакетов очень сильно ограничивают возможности. Так что вместо многопоточности пришлось ввести искусственную многопоточность в виде тактов “пульса” частотой в 1 сек (чтобы почти всегда успевали выполняться даже тяжелые функции). Так что в схеме все работает последовательно, но в целом возникает одновременность выполнения различных функций.<br>
 Итак, активность всего функционала Beast синхронизирована Пульсом и от него начинается. В момент включения Beast с Пульта этим же Пульсом синхронизируется и работа Пульта.<br>
@@ -100,7 +99,3 @@ href="funcs/consciousness.htm">consciousness</a>) с
 желаемой цели.<br>
 
 <br><br><br><br><br>
-
-
-
-
