--- a/beast_scheme/package/TerminalActions.htm
+++ b/beast_scheme/package/TerminalActions.htm
@@ -24,4 +24,4 @@
 <li><a href="../funcs/UpdateActionsTargetsFromID.htm">UpdateActionsTargetsFromID</a> - Обновить список БП, которые улучшаются при действии</li>
 <li><a href="../funcs/UpdateTerminalActionsExpenses.htm">UpdateTerminalActionsExpenses</a> - Обновить массив затратных действий</li>
 <li><a href="../funcs/ChooseSimpleReflexexAction.htm">ChooseSimpleReflexexAction</a> - выбрать подходящий простейший рефлекс и вернуть его действие</li>
-<li><a href="../funcs/GetSimpleActionForCurContitions.htm">GetSimpleActionForCurContitions</a> - ыдать массив возможных действий по ID парамктров гомеостаза как цели для улучшения в данных условиях</li>
+<li><a href="../funcs/GetSimpleActionForCurContitions.htm">GetSimpleActionForCurContitions</a> - выдать массив возможных действий по ID параметров гомеостаза как цели для улучшения в данных условиях</li>
