--- a/beast_scheme/package/actions_images_mental.htm
+++ b/beast_scheme/package/actions_images_mental.htm
@@ -11,7 +11,7 @@
 <h1 style='position:absolute;top:-10px;left:50%;transform: translate(-50%, 0);font-size:18px;'>Совокупные образы ментальных действий</h1>
 </div>
 
-Образ ментального действия - не внешне налюаемого, а для внутренних функций (в мозге - произвольное перераспределение активностей).<br>
+Образ ментального действия - не внешне наблюдаемого, а для внутренних функций (в мозге - произвольное перераспределение активностей).<br>
 <br>  
 <li><a href="../funcs/CreateNewlastMentalActionsImagesID.htm">CreateNewlastMentalActionsImagesID</a> - создать новое сочетание ментальных действий если такого еще нет</li>
 <li><a href="../funcs/SaveMentalActionsImagesArr.htm">SaveMentalActionsImagesArr</a> - сохранить образы сочетаний ментальных действий</li>
