--- a/beast_scheme/package/base_state_image.htm
+++ b/beast_scheme/package/base_state_image.htm
@@ -15,7 +15,7 @@
 Ранее использовалось для записи Правила по изменению состояния, а не ответу оператора, теперь НЕ ИСПОЛЬЗУЕТСЯ в Правилах.<br>
 м.б. все же, будет как-то использоваться.<br>
 <br>
-Образ текущего сосотояния для func understandingSituation
+Образ текущего состояния для func understandingSituation
 Возникает только при активации дерева от ActiveFromConditionChange()
 т.е. только если это - не действия оператора Пульта: if !WasOperatorActiveted {<br>
 <br>
