--- a/beast_scheme/package/cerebellum.htm
+++ b/beast_scheme/package/cerebellum.htm
@@ -41,6 +41,6 @@
 <li><a href="../funcs/cerebellumCoordination.htm">cerebellumCoordination</a> - Создать или дополнить автоматизм рефлексом мозжечка</li>
 <li><a href="../funcs/createNewCerebellumReflex.htm">createNewCerebellumReflex</a> - создать новый автоматизм для мозжечкового рефлекса</li>
 <li><a href="../funcs/SaveCerebellumReflex.htm">SaveCerebellumReflex</a> - охранить рефлексы мозжечка</li>
-<li><a href="../funcs/loadCerebellumReflex.htm">loadCerebellumReflex</a> - агрузить рефлексы мозжечка</li>
+<li><a href="../funcs/loadCerebellumReflex.htm">loadCerebellumReflex</a> - загрузить рефлексы мозжечка</li>
 <li><a href="../funcs/getCerebellumReflexAddEnergy.htm">getCerebellumReflexAddEnergy</a> - скорректированную силу действия автоматизма</li>
 <li><a href="../funcs/runCerebellumAdditionalAutomatizm.htm">runCerebellumAdditionalAutomatizm</a> - выполнить дополнительные мозжечковые автоматизмы сразу после выполняющегося автоматизма</li>
