--- a/beast_scheme/package/episodic_memory.htm
+++ b/beast_scheme/package/episodic_memory.htm
@@ -17,10 +17,10 @@
 
 Поиск решений реализуется функцией getRulesFromEpisodicsSlice для только что пройденной последовательности Правил.<br>
 Линейная, не ветвящаяся  цепочка.<br>
-Запоминается в файле episod_memory.txt для каждого ор.рефлекса (до обработки с редуцированием operMemory)
+Запоминается в файле episod_memory.txt для каждого ор. рефлекса (до обработки с редуцированием operMemory)
 т.е. это - самая многочисленная часть памяти, поэтому оптимизируется, редуцируясь во сне (в psychic_sleep_process.go).<br>
 <br>  
 <li><a href="../funcs/newEpisodeMemory.htm">newEpisodeMemory</a> - добавить НОВЫЙ ЭПИЗОД ПАМЯТИ</li>
 <li><a href="../funcs/saveEpisodicMenory.htm">saveEpisodicMenory</a> - запись эпизодической памяти</li>
 <li><a href="../funcs/loadEpisodicMenory.htm">loadEpisodicMenory</a> - загрузка эпизодической памяти</li>
-<li><a href="../funcs/getLastRulesSequenceFromEpisodeMemory.htm">getLastRulesSequenceFromEpisodeMemory</a> - Вытащить из эпизод.памяти посленюю цепочку кадров</li>
+<li><a href="../funcs/getLastRulesSequenceFromEpisodeMemory.htm">getLastRulesSequenceFromEpisodeMemory</a> - Вытащить из эпизод. памяти последнюю цепочку кадров</li>
