--- a/beast_scheme/package/gomeostas.htm
+++ b/beast_scheme/package/gomeostas.htm
@@ -19,8 +19,8 @@
 <li><a href="../funcs/GetCurGomeoParams.htm">GetCurGomeoParams</a> - выдать текущие значения жизненных параметров</li>
 <li><a href="../funcs/SetCurGomeoParams.htm">SetCurGomeoParams</a> - установка параметров гомеостаза с Пульта</li>
 <li><a href="../funcs/gomeostazUpdate.htm">gomeostazUpdate</a> -  скорректировать текущее состояние гомеостаза</li>
-<li><a href="../funcs/SaveCurrentGomeoParams.htm">SaveCurrentGomeoParams</a> - Сохрнаить значения параметров гомеостаза в файле</li>
-<li><a href="../funcs/changingParVal.htm">changingParVal</a> - шаг изменения парамктра со скоростью GomeostazParamsSpeed</li>
+<li><a href="../funcs/SaveCurrentGomeoParams.htm">SaveCurrentGomeoParams</a> - Сохранить значения параметров гомеостаза в файле</li>
+<li><a href="../funcs/changingParVal.htm">changingParVal</a> - шаг изменения параметра со скоростью GomeostazParamsSpeed</li>
 <li><a href="../funcs/IsBeastDeath.htm">IsBeastDeath</a> - смерть Beast при повреждении > 99%</li>
 <li><a href="../funcs/FindTargetGomeostazID.htm">FindTargetGomeostazID</a> - выявить ID параметров гомеостаза как цели для улучшения в данных условиях</li>
 <li><a href="../funcs/getNormaDiapason.htm">getNormaDiapason</a> - в каком из 5 диапазоне нормы находится Базовый параметр</li>
