--- a/beast_scheme/package/importance.htm
+++ b/beast_scheme/package/importance.htm
@@ -30,13 +30,13 @@
 Значимость всегда определяется в контексте всех предшествующих условий,
 т.е. специфична для активностей деревьев автоматизмов и понимания.<br>
 
-При каждом вызове consciousness определяется текущий объект наибольшой значимости в воспринимаемом -
+При каждом вызове consciousness определяется текущий объект наибольшей значимости в воспринимаемом -
 в функции определения текущей Цели getMentalPurpose().<br>
 <br>  
 <li><a href="../funcs/createNewlastImportanceID.htm">createNewlastImportanceID</a> - создать новый образ значимости объекта восприятия если такого еще нет</li>
 <li><a href="../funcs/Saveimportance.htm">Saveimportance</a> - сохранить Образы Importance</li>
 <li><a href="../funcs/loadImportance.htm">loadImportance</a> - загрузить образы Importance</li>
 <li><a href="../funcs/getObjectsImportanceValue.htm">getObjectsImportanceValue</a> - значимость ID объекта внимания в текущих условиях</li>
-<li><a href="../funcs/setImportance.htm">setImportance</a> - Фиксация значимости объекта ОБъективного восприятия всех декларированных видов в данных условиях</li>
-<li><a href="../funcs/getGreatestImportance.htm">getGreatestImportance</a> - найти наиболее значащие обхекты в данных условиях</li>
+<li><a href="../funcs/setImportance.htm">setImportance</a> - Фиксация значимости объекта Объективного восприятия всех декларированных видов в данных условиях</li>
+<li><a href="../funcs/getGreatestImportance.htm">getGreatestImportance</a> - найти наиболее значащие объекты в данных условиях</li>
 <li><a href="../funcs/getTopAttentionObject.htm">getTopAttentionObject</a> - выбрать один, самый актуальный объект</li>
