--- a/beast_scheme/package/mood.htm
+++ b/beast_scheme/package/mood.htm
@@ -14,8 +14,8 @@
 Настроение бывает: Плохо -10 ... 0 ...+10 Хорошо.<br>
 Ощущение силы Плохо и сил Хорошо и это информационно для оценок последствий действий.
 Настроение возникает в зависимости от гомеостатический параметров
-а так же при оценке опасноного состояния.<br>
-Это безусловно-рефлекторная оценка на освнове изменений
+а так же при оценке опасного состояния.<br>
+Это безусловно-рефлекторная оценка на основе изменений
 1) гомео параметров (улавливает их изменение >4%) и 2) основы базовых контекстов: 0- НОРМА, 1-ПЛОХО, 2-ХОРОШО<br>
 Хотя базовые контексты уже создаются на основе жизненных параметров,
 но это - безусловный рефлекс на основе безусловного рефлекса активации базовых контекстов.
