--- a/beast_scheme/package/orientation_reflexes.htm
+++ b/beast_scheme/package/orientation_reflexes.htm
@@ -20,6 +20,6 @@
 <li><a href="../funcs/orientation_2.htm">orientation_2</a> - проверить подходит ли автоматизм defAutomatizmID к текущим условиям, если нет, - по опыту того, к чему приводят новые условия - режим нахождения альтернативы</li>
 <li><a href="../funcs/createAutomatizm.htm">createAutomatizm</a> - сформировать пробный автоматизм моторного действия и сразу запустить его в действие</li>
 <li><a href="../funcs/findSuitablePhrase.htm">findSuitablePhrase</a> - подобрать по тону и настроению хоть как-то ассоциирующуюся фразу из имеющихся</li>
-<li><a href="../funcs/getImportantSigns.htm">getImportantSigns</a> - найти важные (по опыту) признаки в новизне - чисто рефлексторный процесс поиска в опыте</li>
+<li><a href="../funcs/getImportantSigns.htm">getImportantSigns</a> - найти важные (по опыту) признаки в новизне - чисто рефлекторный процесс поиска в опыте</li>
 
 <br><br><br><br>
