--- a/beast_scheme/package/pul_out.htm
+++ b/beast_scheme/package/pul_out.htm
@@ -14,7 +14,7 @@
 
 Передача информации на Пульт 
 
-<li><a href="../funcs/WritePultConsol.htm">WritePultConsol</a> - вывести на консоль Пульта Сообщения накапливаются в WritePultConsolStr и откправлются с каждым пульсом</li>
+<li><a href="../funcs/WritePultConsol.htm">WritePultConsol</a> - вывести на консоль Пульта Сообщения накапливаются в WritePultConsolStr и отправлются с каждым пульсом</li>
 <li><a href="../funcs/TodoPanic.htm">TodoPanic</a> - функция вызова паники с информированием в логе Пульта</li>
 <li><a href="../funcs/SentActionsForPult.htm">SentActionsForPult</a> - вывести на Пульт действия Бота строкой</li>
 <li><a href="../funcs/SentСonfusion.htm">SentСonfusion</a> - Показать непонимания, растерянность</li>
