--- a/beast_scheme/package/purpose_genetic.htm
+++ b/beast_scheme/package/purpose_genetic.htm
@@ -20,9 +20,9 @@
 прописана в terminal_actons.txt<br>
 <br>  
 <li><a href="../funcs/getPurposeGenetic.htm">getPurposeGenetic</a> - Определение Цели в данной ситуации - на уровне наследственных функций</li>
-<li><a href="../funcs/createAndRunAutomatizmFromPurpose.htm">createAndRunAutomatizmFromPurpose</a> - создание и запуск автоматизма на освное целей</li>
+<li><a href="../funcs/createAndRunAutomatizmFromPurpose.htm">createAndRunAutomatizmFromPurpose</a> - создание и запуск автоматизма на основное целей</li>
 <li><a href="../funcs/chooseAutomatizmSuccessAndRun.htm">chooseAutomatizmSuccessAndRun</a> - выбрать из ранее удачного автоматизма, перекрыть цель новой и запустить новый автоматизм</li>
-<li><a href="../funcs/findAnySympleRandActions.htm">findAnySympleRandActions</a> - пробовать всякие случайныее простые действия, не повторяясь. На стадии 3 тварь получает реакцию оператора, которую отзеркаливает</li>
+<li><a href="../funcs/findAnySympleRandActions.htm">findAnySympleRandActions</a> - пробовать всякие случайные простые действия, не повторяясь. На стадии 3 тварь получает реакцию оператора, которую отзеркаливает</li>
 <li><a href="../funcs/getPurposeGeneticAndRunAutomatizm.htm">getPurposeGeneticAndRunAutomatizm</a> - выбирается действие пробного автоматизма из выполнившегося рефлекса actualRelextActon</li>
 <li><a href="../funcs/getPurposeGenetic2AndRunAutomatizm.htm">getPurposeGenetic2AndRunAutomatizm</a> - обработка автоматизма, рвущегося на выполнение, но в условиях может быть новизна</li>
 
