--- a/beast_scheme/package/rules.htm
+++ b/beast_scheme/package/rules.htm
@@ -20,12 +20,12 @@
 //записать ПРАВИЛО, Стимул - ОТ ОПЕРАТОРА
 fixNewRules(lastCommonDiffValue,curActiveActionsID)<br>
 
-Цепочки Правил в Эпиз.памяти создабт карту решений в контексте одной темы:<br>
+Цепочки Правил в Эпиз. памяти создают карту решений в контексте одной темы:<br>
 карты местности - куда идти после очередного шага,<br>
 карту игры в шахматы: как ходить в данной позиции и на сколько шагов вперед обдумывать решения.<br>
 
-Поиск по Павилам ведется не по отдельным действиям (а это - не только слова, но и тон и/или кнопки действий),
-а тупо по ID образов действий. Но, если крепко заматься и вспоминать детально,
+Поиск по Правилам ведется не по отдельным действиям (а это - не только слова, но и тон и/или кнопки действий),
+а тупо по ID образов действий. Но, если крепко задуматься и вспоминать детально,
 то можно делать поиск по всем компонентам действий и делать его мягким.<br>
 <br>  
 <li><a href="../funcs/createNewRules.htm">createNewRules</a> - оздать новое правило если такого еще нет</li>
@@ -33,10 +33,10 @@ fixNewRules(lastCommonDiffValue,curActiveActionsID)<br>
 <li><a href="../funcs/loadrulesArr.htm">loadrulesArr</a> - загрузить образы rules</li>
 <li><a href="../funcs/GetRulesFromEpisodeMemory.htm">GetRulesFromEpisodeMemory</a> - Создать групповое правило (более одного в цепочке EpisodeMemory.TAid) из последнего участка эпизодической памяти</li>
 <li><a href="../funcs/fixNewRules.htm">fixNewRules</a> - при каждом ответе на действия оператора - прописывать текущее ПРАВИЛО rules</li>
-<li><a href="../funcs/fixNewTeachRules.htm">fixNewTeachRules</a> - Отзеркаливает авторитерный ответ Оператора на совершенное действие</li>
+<li><a href="../funcs/fixNewTeachRules.htm">fixNewTeachRules</a> - Отзеркаливает авторитетный ответ Оператора на совершенное действие</li>
 <li><a href="../funcs/getSuitableRules.htm">getSuitableRules</a> - выбрать наилучшее Правило rulesID для текущего действию Оператора с Пульта</li>
 <li><a href="../funcs/getRulesArrFromTrigger.htm">getRulesArrFromTrigger</a> - быстро выбрать ранее успешное правило из rulesArr для данных условий и заданного Стимула trigID типа ActionsImage</li>
-<li><a href="../funcs/getRulesFromEpisodicsSlice.htm">getRulesFromEpisodicsSlice</a> - Найти последнее известное Правило по цепочке последних limit кадров эпиз.памяти</li>
+<li><a href="../funcs/getRulesFromEpisodicsSlice.htm">getRulesFromEpisodicsSlice</a> - Найти последнее известное Правило по цепочке последних limit кадров эпиз. памяти</li>
 <li><a href="../funcs/getRulesArrFromAttentionObject.htm">getRulesArrFromAttentionObject</a> - Выбрать ранее успешное правило из rulesArr для данных условий КОНКРЕТНО ДЛЯ определенного объекта внимания</li>
 <li><a href="../funcs/getDominantEffect.htm">getDominantEffect</a> - Найти доминирующий эффект для сочетания Стимул-Ответ</li>
 <li><a href="../funcs/isNextWellEffectFromActonRules.htm">isNextWellEffectFromActonRules</a> - есть ли положительный эффект у Правила, следующего за действием автоматизма</li>
