--- a/beast_scheme/package/short_term_memory.htm
+++ b/beast_scheme/package/short_term_memory.htm
@@ -13,10 +13,10 @@
 
 Сохраняет подряд ID базовых ментальных цепочек goNext<br>
 Не сохраняется, но обрабатывается во сне или в спокойствии с выделением новых Правил.
-А так же используется для быстрогого обобщения, ориентации и сознательного поиска.<br>
+А так же используется для быстрого обобщения, ориентации и сознательного поиска.<br>
 
-Быстро растуший массив, ограниченный 1000 элементов<br>
+Быстро растущий массив, ограниченный 1000 элементов<br>
 <br>  
-<li><a href="../funcs/addShortTermMemory.htm">addShortTermMemory</a> - добвить goNext в кратковременную память</li>
+<li><a href="../funcs/addShortTermMemory.htm">addShortTermMemory</a> - добавить goNext в кратковременную память</li>
 
 <br><br><br><br>
