--- a/beast_scheme/package/sleep.htm
+++ b/beast_scheme/package/sleep.htm
@@ -20,7 +20,7 @@ CurrentInformationEnvironment - текущего образа информаци
 Это становится контекстом развития экспериментирования с оставшимися со дня образами.<br> 
 Механизм преждевременного пробуждения возвращает бодрствование.<br> 
 <br> 
-Это - еще не отрабтанный функционал.
+Это - еще не отработанный функционал.
 <br>  
 <li><a href="../funcs/SleepPuls.htm">SleepPuls</a> - синхронизация процесса сна</li>
-<li><a href="../funcs/prepareWordArr.htm">prepareWordArr</a> - обработка накопившегося массива распознанных фраз, бъекты PurposeGeneticObject, объекты внимания высокой значимости и эпизодической памяти</li>
+<li><a href="../funcs/prepareWordArr.htm">prepareWordArr</a> - обработка накопившегося массива распознанных фраз, объекты PurposeGeneticObject, объекты внимания высокой значимости и эпизодической памяти</li>
