--- a/beast_scheme/package/trigger_and_action.htm
+++ b/beast_scheme/package/trigger_and_action.htm
@@ -11,12 +11,12 @@
 <h1 style='position:absolute;top:-10px;left:50%;transform: translate(-50%, 0);font-size:18px;'><nobr>Отдельные правила - как эффект от совершенных действий</nobr></h1>
 </div>
 
-Образ обощенного (без условия применения) Правила: 
+Образ обобщенного (без условия применения) Правила: 
 Cтимул (действий оператора) - ответа Beast - Эффекта<br>
 
-Правило приобретает определнную значимость (смысл) в контексте опредеелнных условий.
+Правило приобретает определенную значимость (смысл) в контексте опредеелнных условий.
 Поэтому нет никакого смысла пытаться использовать обобщенное правило само по себе 
-т.к. одно и то же сочетания Стиму и Ответ может иметь разный эФфект.<br>
+т.к. одно и то же сочетания Стимул и Ответ может иметь разный эффект.<br>
 НО если для данного сочетания Стимул-Ответ есть только один вод эффекта, 
 то это - уже Информация, и чем больше опыт (количество обобщенных правил), тем такая информация полезнее.<br>
 <br>  
