--- a/beast_scheme/package/trigger_and_action_mental.htm
+++ b/beast_scheme/package/trigger_and_action_mental.htm
@@ -14,17 +14,17 @@
 Образ ментального Правила.<br>
 Ментальное Правило используется как опыт использования ментальных автоматизмов для нахождения решения.<br>
 
-Начало фиксации Правила - ментальный запуск моторного автомтаизма (MentalAutomatizm.ActionsImageID ->  activateMotorID).<br>
-Эффект Правила отражает насколько мент.автоматизм привел к успешному решению,
+Начало фиксации Правила - ментальный запуск моторного автоматизма (MentalAutomatizm.ActionsImageID ->  activateMotorID).<br>
+Эффект Правила отражает насколько мент. автоматизм привел к успешному решению,
 т.е. оценивается в момент действий оператора в период ожидания.<br>
 После этого в эпизод память и MentalTriggerAndActionArr записывается новое Правило.<br>
 Так же при этом проставляется MentalAutomatizm.Usefulness автоматизму, запустившему действие (вообще MentalAutomatizm нивелируется Правилами).<br>
 
-При ментальном запуске моторного автомтаизма фиксируется последний фрагмент Кратковременной памяти (saveFromNextIDcurretCicle),
-начиная с последней объективной активации consciousness т.е. только цепочка для данной активности дерева актоматизмов,
+При ментальном запуске моторного автоматизма фиксируется последний фрагмент Кратковременной памяти (saveFromNextIDcurretCicle),
+начиная с последней объективной активации consciousness т.е. только цепочка для данной активности дерева автоматизмов,
 но могут быть разные активности дерева понимания из-за произвольной активации
-(т.к. при переактивации деревьев могут измениться базовые циклы) и эти звенья оцениваются как успешнвые или нет.<br>
-Это Правило записывается в массив Правил rulesMentalArr, и в кадр эпиз.памяти с Type=1 .<br>
+(т.к. при переактивации деревьев могут измениться базовые циклы) и эти звенья оцениваются как успешные или нет.<br>
+Это Правило записывается в массив Правил rulesMentalArr, и в кадр эпиз. памяти с Type=1 .<br>
 <br>  
 <li><a href="../funcs/createNewlastMentalTriggerAndActionID.htm">createNewlastMentalTriggerAndActionID</a> - создать новый образы ментального правила, если такого еще нет</li>
 <li><a href="../funcs/SaveMentalTriggerAndActionArr.htm">SaveMentalTriggerAndActionArr</a> - сохранить образы ментального правила</li>
