--- a/beast_scheme/package/understanding.htm
+++ b/beast_scheme/package/understanding.htm
@@ -12,25 +12,25 @@
 </div>
 
 Базовая система самоощущения (актуализация доступной информации),
-функция поддержвания информационной среды в зависимости от текущй ситуации -
-обдщая картина понимания ситуации,
+функция поддержания информационной среды в зависимости от текущий ситуации -
+общая картина понимания ситуации,
 с функцией лени - думать или не думать: мотивированность думать зависит от ситуации, ее опасности.
 Решение что-делать или просто игнорировать ситуацию - важнейший параметр индивидуальной адаптивности.
 Не просто искать способ выйти из опасного состояния, а искать как улучшить состояние,
-каким бы оно ни было вплоть до полной неудовлетворенности существующим, когда поис ведется в любой ситуации.<br>
+каким бы оно ни было вплоть до полной неудовлетворенности существующим, когда поиск ведется в любой ситуации.<br>
 Нужна функция, определяющая лень с индивидуализированными параметрами
-(м.б. зависящими от более базовых индивид.параментров).
+(м. б. зависящими от более базовых индивид. параментров).
 Функция поддерживается системой самоощущения,
 которая работает независимо от активации дерева понимания по каждому пульсу.<br>
 
 Активация func consciousness - после включения или пробуждения - начало цепочки мыслей,
-а так же - по активности дерева (ор.рефлекс) - срабатывает функция делать-неделать.<br>
+а так же - по активности дерева (ор. рефлекс) - срабатывает функция делать - неделать.<br>
 
 После объективной активации (activationType==1) начинается рекурсивный субъективный вызов (activationType==2)
 - цикл обдумывания (субъективный ориентировочный рефлекс), каждой шаг которого основывается на информации, даваемой предыдущим шагом
 с целью найти подходящие действия для данной ситуации, что дает возможность снова сориентироваться.<br>
 
-Кроме гомеостатического инфо.окрыжения psi_information_environment.go
+Кроме гомеостатического инфо. окружения psi_information_environment.go
 есть psi_information_environment_mental.go куда помещаются результаты информационных функций.
 Использует субъективную часть эпизодов памяти - субъективный тип (для записи эпизодов цепочки мыслей).<br>
 
@@ -38,7 +38,7 @@
 Если решение не найдено на данном уровне, то отрабатывает следующий уровень сложности обработки (что характеризует эволюционную последовательность их появления).<br>
 
 РАБОТА consciousness() каждого уровня описана по месту. Изолированная от непосредственных воздействий и поэтому самостоятельная система оценки и корректировки состояния,
-происходит с формированием опыта прозвольности выполнения Правил и их выбора для данных условий,
+происходит с формированием опыта произвольности выполнения Правил и их выбора для данных условий,
 в частности, Правил относительно самого себя (самосознание).<br>
 <br>  
 <li><a href="../funcs/consciousness.htm">consciousness</a> - Главная, активная с каждым ориентировочным рефлексов функция циклов осмысления
@@ -48,6 +48,6 @@
 <li><a href="../funcs/createBasicLink.htm">createBasicLink</a> - создать Базовое звено цепи fromNextID для данной активности деревьев
 и пройти цепочку до конца, чтобы продолжить цикл от него</li>
 <li><a href="../funcs/createNexusFromNextID.htm">createNexusFromNextID</a> - создание ментального автоматизма инфо-функции c ID= infoID</li>
-<li><a href="../funcs/afterWaitingPeriod.htm">afterWaitingPeriod</a> - Учесть последствия ментального запуска мот.автоматизма</li>
+<li><a href="../funcs/afterWaitingPeriod.htm">afterWaitingPeriod</a> - Учесть последствия ментального запуска мот. автоматизма</li>
 <li><a href="../funcs/getMentalEffect.htm">getMentalEffect</a> - учесть эффект достижения ментальной цели</li>
 <br><br><br><br>
