--- a/beast_scheme/package/understanding_situation_image.htm
+++ b/beast_scheme/package/understanding_situation_image.htm
@@ -12,7 +12,7 @@
 </div>
 
 Образ текущей ситуации для осмысления или Образ Модели Понимания - 
-4- уровень Дерева Понимания (или дерева ментальных автоматизмов)
+4 уровень Дерева Понимания (или дерева ментальных автоматизмов)
 Здесь активная ID дерева автоматизмов (доступны моторные автоматизмы от дерева автоматизмов)<br>
 <br>  
 <li><a href="../funcs/createSituationImage.htm">createSituationImage</a> - создать образ ситуации, если такого еще нет</li>
