--- a/beast_scheme/package/understanding_tree.htm
+++ b/beast_scheme/package/understanding_tree.htm
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!DOCTYPE html>переактиваровать
 <html>
 <head>
   <meta charset="UTF-8">
@@ -16,32 +16,32 @@
 формат записи: ID|ParentNode|Mood|EmotionID|SituationID|PurposeID<br>
 Узлы всех уровней могут произвольно меняться на другие для переактивации Дерева.<br>
 <br>
-Дерево может переактивароваться при срабатывании мент.автоматизмов с действиями
+Дерево может переактивироваться при срабатывании мент. автоматизмов с действиями
 MentalActionsImages.activateBaseID и MentalActionsImages.activateEmotion
 в mental_automatizm_actions.go RunMentalAutomatizm(
 SituationID определяет основной контекст ситуации, определяемый при вызове активации дерева понимания.<br><br>
 Если этот контекст не задан в understandingSituation(situationImageID
-то в getCurSituationImageID() по-началу выбирается наугад (для первого приближения) более важные из существующих,
+то в getCurSituationImageID() по началу выбирается наугад (для первого приближения) более важные из существующих,
 но потом дерево понимания может переактивироваться с произвольным заданием контекста.<br>
 От этого параметра зависит в каком направлении пойдет информационный поиск решений,
 если не будет запущен штатный автоматизм ветки (ориентировочные реакции).
 Более частный, целевой контекст ситуации определяется следующим параметром PurposeID.<br>
 <br>
 ID образа ЖЕЛАЕМОЙ при данных условиях цели - PurposeImage,
-который по-началу наследует PurposeGenetic, но может произвольно меняться,
+который по началу наследует PurposeGenetic, но может произвольно меняться,
 в том числе после подсказки оператором: 
-в результате осмысления ответа оператора и запуска мент.автоматизма корректироваки цели
+в результате осмысления ответа оператора и запуска мент. автоматизма корректировки цели
 с перезапуском дерева понимания.<br>
 Для достижения этой общей цели в цепочках мент.автоматизмов определяются промежуточные цели так,
-что каждый мент.автоматизм оценивается успешным при появлении состояния, соотвествующему данной промежуточной цели,
-а конечное звено цепи должно стремиться к соотвествию PurposeID.<br> 
+что каждый мент. автоматизм оценивается успешным при появлении состояния, соответствующему данной промежуточной цели,
+а конечное звено цепи должно стремиться к соответствию PurposeID.<br> 
 <br> 
 Активация дерева ментальных автоматизмов происходит из:<br> 
 func afterTreeActivation() - при каждой активации automatism_tree.go<br> 
 и если было действия без ответа в течении 20 пульсов, то understandingSituation вызывается из
 func noAutovatizmResult()<br> 
 т.е. оба деревав работают совместно при EvolushnStage > 3 и по каждой активации UnderstandingTree
-добавляется эпизд памяти newEpisodeMemory()<br> 
+добавляется эпизд. памяти newEpisodeMemory()<br> 
 <br> 
 Аналогично дереву моторных автоматзмов, после активации могут быть ориентировочные рефлексы привлечения внимания.<br> 
 <br> 
