--- a/beast_scheme/package/verbal_Broca_img.htm
+++ b/beast_scheme/package/verbal_Broca_img.htm
@@ -12,10 +12,10 @@
 </div>
 
 Словестные образы (область Брока)  для 4, 5 и 6-го уровня дерева автоматизмов.<br> 
-Смысл (осознанную значимость) образ приобретеает только в контексте Дерева Понимания (дерева мент.автоматизмов).<br> 
+Смысл (осознанную значимость) образ приобретает только в контексте Дерева Понимания (дерева мент. автоматизмов).<br> 
 <br> 
 Детекторы зоны Вернике распознают слова и словосочетания, 
-а область Брока отвечает за смысл распознанных слов и словосочетений,
+а область Брока отвечает за смысл распознанных слов и словосочетаний,
 за конструирование собственных словосочетаний,
 за моторное использование слов и словосочетаний.<br> 
 За все ответственная структура - образ осмысленных слов и сочетаний.<br> 
