--- a/beast_scheme/package/word_sensor.htm
+++ b/beast_scheme/package/word_sensor.htm
@@ -37,13 +37,13 @@
 <br>
 <br>  
 <li><a href="../funcs/SetNewTextBlock.htm">SetNewTextBlock</a> - Новая порция текста для формирования дерева слов</li>
-<li><a href="../funcs/addNewtempArr.htm">addNewtempArr</a> - добавляются как целиком фраза, так и все слова во фразе. Тут же дозаполняетс дерево слов уже многократно провторяющимися элементами.</li>
+<li><a href="../funcs/addNewtempArr.htm">addNewtempArr</a> - добавляются как целиком фраза, так и все слова во фразе. Тут же дозаполняется дерево слов уже многократно повторяющимися элементами.</li>
 <li><a href="../funcs/createNewNodeWordTree.htm">createNewNodeWordTree</a> - создать новый узел дерева слов</li>
 <li><a href="../funcs/loadWordTree.htm">loadWordTree</a> - загрузить дерево слов  из файла</li>
 <li><a href="../funcs/SaveWordTree.htm">SaveWordTree</a> - сохранить дерево слов</li>
 <li><a href="../funcs/SetNewWordTreeNode.htm">SetNewWordTreeNode</a> - вставить новое слово в дерево слов</li>
 <li><a href="../funcs/WordDetection.htm">WordDetection</a> - распознаватель слова</li>
-<li><a href="../funcs/getAlternative.htm">getAlternative</a> - попробовать найти подходящее слово с альтрнативным ID. Первые буквы должны совпадать, а остальные, кроме последней (разные окончания),
+<li><a href="../funcs/getAlternative.htm">getAlternative</a> - попробовать найти подходящее слово с альтрнативными ID. Первые буквы должны совпадать, а остальные, кроме последней (разные окончания),
 быть перемешаны, но в наличии >80%</li>
 <li><a href="../funcs/addNewMemoryDetected.htm">addNewMemoryDetected</a> - добавить строку в массив памяти о воспринятых фразах в текущем активном контексте</li>
 <li><a href="../funcs/VerbalDetection.htm">VerbalDetection</a> - распознаватель образов фраз</li>
@@ -51,6 +51,6 @@
 <li><a href="../funcs/createNewNodePhraseTree.htm">createNewNodePhraseTree</a> - создать новый узел дерева фраз</li>
 <li><a href="../funcs/loadPhraseTree.htm">loadPhraseTree</a> - Загрузка дерева фраз из файла</li>
 <li><a href="../funcs/SavePhraseTree.htm">SavePhraseTree</a> - Сохранить дерево фраз</li>
-<li><a href="../funcs/SetNewPhraseTreeNode.htm">SetNewPhraseTreeNode</a> - вставка новой фразы со вставкой новых слов фразы, так что фраза будет распознанна всегда.</li>
+<li><a href="../funcs/SetNewPhraseTreeNode.htm">SetNewPhraseTreeNode</a> - вставка новой фразы со вставкой новых слов фразы, так что фраза будет распознана всегда.</li>
 <li><a href="../funcs/PhraseDetection.htm">PhraseDetection</a> - проход одной фразы - распознавание ID слов фразы</li>
 <li><a href="../funcs/GetPhraseStringsFromPhraseID.htm">GetPhraseStringsFromPhraseID</a> - строка из ID фразы дерева фраз</li>
