--- a/beast_scheme/package/automatizm.htm
+++ b/beast_scheme/package/automatizm.htm
@@ -22,7 +22,7 @@
 <br>
 Для каждого действия brain\reflexes\terminete_action.go задается "сила" действия в градации от 1 до 10, которая передается наПульт словами:<br>
 Максимально (сила=10), wwww (сила=8)", "Очень сильно (сила=9), ... Едва (сила=1).
-При этом пропорционально расходуется энергия и могут происходить другие изменения гоместаза.<br>
+При этом пропорционально расходуется энергия и могут происходить другие изменения гомеостаза.<br>
 Такой результат сопоставляется с допустимым сразу при действии и корректируется установкой рефлекса мозжечка.<br>
 <br>
 Две области моторного терминала уровня психики:<br>
@@ -48,10 +48,10 @@
 <li><a href="../funcs/TerminateMotorAutomatizmActions.htm">TerminateMotorAutomatizmActions</a> - совершить МОТОРНОЕ (http://go/pages/terminal_actions.php) действие</li>
 <li><a href="../funcs/TerminatePraseAutomatizmActions.htm">TerminatePraseAutomatizmActions</a> - совершить МОТОРНОЕ (ВЫДАТЬ ФРАЗУ) действие</li>
 <li><a href="../funcs/expensesGomeostatParametersAfterAction.htm">expensesGomeostatParametersAfterAction</a> - изменение гомео-параметров при действии: сила действия корректирует воздействие на параметр гомеостаза</li>
-<li><a href="../funcs/getAutomatizmFromNodeID.htm">getAutomatizmFromNodeID</a> - Не раздумывая, а рефлексторно используя имеющуюся информацию, ВЫБРАТЬ ЛУЧШИЙ АВТОМАТИЗМ для узла дерева автоматизмов</li>
+<li><a href="../funcs/getAutomatizmFromNodeID.htm">getAutomatizmFromNodeID</a> - Не раздумывая, а рефлекторно используя имеющуюся информацию, ВЫБРАТЬ ЛУЧШИЙ АВТОМАТИЗМ для узла дерева автоматизмов</li>
 <li><a href="../funcs/SetAutomatizmBelief.htm">SetAutomatizmBelief</a> - Только один из автоматизмов, прикрепленных к ветке или образу, может иметь Belief=2 - проверенное собственное знание</li>
 <li><a href="../funcs/createNodeUnattachedAutomatizm.htm">createNodeUnattachedAutomatizm</a> - формирование не привязанных к узлу автоматизмов при активации дерева - для всех фраз - и для всех действий на основе привязанного автоматизма, чтобы другие ветки могли пользоваться при разных условиях.</li>
 <li><a href="../funcs/FormingMirrorAutomatizmFromList.htm">FormingMirrorAutomatizmFromList</a> - Формирование зеркальных автоматизмов на основе списка ответов</li>
 <li><a href="../funcs/FormingMirrorAutomatizmFromTempList.htm">FormingMirrorAutomatizmFromTempList</a> - Формирование зеркальных автоматизмов на основе общего шаблона ответов</li>
 <li><a href="../funcs/createNewMirrorAutomatizm.htm">createNewMirrorAutomatizm</a> - создание зеркального автоматизма, повторяющего действия оператора в данных условиях в ответ на действия sourceAtmzm - причина ответа оператора</li>
-<li><a href="../funcs/provokatorMirrorAutomatizm.htm">provokatorMirrorAutomatizm</a> - в случае отсуствия автоматизма в данных условиях - послать оператору те же стимулы, чтобы посмотреть его реакцию.</li>
+<li><a href="../funcs/provokatorMirrorAutomatizm.htm">provokatorMirrorAutomatizm</a> - в случае отсутствия автоматизма в данных условиях - послать оператору те же стимулы, чтобы посмотреть его реакцию.</li>
