--- a/beast_scheme/package/emotions.htm
+++ b/beast_scheme/package/emotions.htm
@@ -15,7 +15,7 @@
 Распознавание активности текущих Базовых контекстов в виде структур 
 - осмысленной значимости сочетаний активных базовых контекстов.
 Произвольно возможна активация имеющегося образа, создание образа новых сочетаний.<br>
-Является важнейшим условным контекстом в психике, определяя смысл (ментально интерпретируюемую значимость) всего остального.<br> 
+Является важнейшим условным контекстом в психике, определяя смысл (ментально интерпретируемую значимость) всего остального.<br> 
 <br>  
 <li><a href="../funcs/createNewBaseStyle.htm">createNewBaseStyle</a> - создать новую эмоцию, если такой еще нет</li>
 <li><a href="../funcs/SaveEmotionArr.htm">SaveEmotionArr</a> - сохранить образы сочетаний базовых стилей</li>
