--- a/beast_scheme/package/mental_automatizm.htm
+++ b/beast_scheme/package/mental_automatizm.htm
@@ -13,34 +13,34 @@
 
 Автоматизмы "внутренних", мыслительных действий:<br>
 1 - активация настроения Mood в дереве понимания 1 2 3 (отражает -1 0 1 UnderstandingNode.Mood)<br>
-	2 - активация эмоции EmotionID в дереве понимания (UnderstandingNode.EmotionID)<br>
-	3 - активация PurposeImage в дереве понимания (UnderstandingNode.PurposeID)<br>
-	4 - запуск информационной функции (безусловного рефлекса внутренних действий)<br>
-	5 - запуск моторного автоматизма<br>
-	6 - запуск Доминанты<br>
-	7 - создание новой Доминанты<br>
+2 - активация эмоции EmotionID в дереве понимания (UnderstandingNode.EmotionID)<br>
+3 - активация PurposeImage в дереве понимания (UnderstandingNode.PurposeID)<br>
+4 - запуск информационной функции (безусловного рефлекса внутренних действий)<br>
+5 - запуск моторного автоматизма<br>
+6 - запуск Доминанты<br>
+7 - создание новой Доминанты<br>
 <br>
 Переходы на следующий автоматизм от предыдущего в цепи 
 с ветвлением в зависимости от BranchID узла дерева моторных автоматизмов AutomatizmNode
 позволяют:<br>
 1. убрать NextID из структуры ментальных автоматизмов и сделать автоматизмы универсальными<br>
-2. делать ветвление следующего звена в цепочке автоматизмв в зависимости от активной BranchID узла дерева моторных автоматизмов AutomatizmNode<br>
+2. делать ветвление следующего звена в цепочке автоматизмов в зависимости от активной BranchID узла дерева моторных автоматизмов AutomatizmNode<br>
 
 
 Информационные функции, вызываемые как действия ментального автоматизма по их ID функции - разные методы получения инфы, систематизации, поиска и т.п.
 с целью найти верное действие для моторного автоматизма, а если нет,
-то создания нового ментального автоматизма для продолжения итеации поиска.<br>
+то создания нового ментального автоматизма для продолжения итерации поиска.<br>
 
 У инфо-функций не должно быть вхлжного аргумента, иначе невозможно будет их вызывать из runMentalFunctionID(id int)
-Поэтому в инфо-функции могут вызываться вспомогательные функции с аргументами, полученными в инфофункци
+Поэтому в инфо-функции могут вызываться вспомогательные функции с аргументами, полученными в инфо-функции
 которые вызываются только если есть нужная инфа, например, сохраненная в mentalInfoStruct<br>
 
 Результат работы инфо-функции записывается в mentalInfoStruct
 и определяется общая переменная currentInfoStructId == ID инфо-функции<br>
 
 <br>
-При добавлении звена в цепочку размышления создается новая goNext с goNext.NextID следующего ID мент.автоматизма.
-В каждом звене цепочки - свой goNext - направляет цепочку с ветвелениями по активному MotorBranchID
+При добавлении звена в цепочку размышления создается новая goNext с goNext.NextID следующего ID мент. автоматизма.
+В каждом звене цепочки - свой goNext - направляет цепочку с ветвлениями по активному MotorBranchID
 т.е. проход цепи идет по последовательности goNext.
 <br>  
 <li><a href="../funcs/createMentalAutomatizmID.htm">createMentalAutomatizmID</a> - создать новый автоматизм</li>
@@ -53,8 +53,8 @@
 <li><a href="../funcs/runMentalFunctionID.htm">runMentalFunctionID</a> - Функция вызова пронумерованной инфо-функции</li>
 <li><a href="../funcs/infoFunc1.htm">infoFunc1</a> - Подобрать MentalActionsImages для продолжения цикла осмысления</li>
 <li><a href="../funcs/infoFunc2.htm">infoFunc2</a> - выбор того или иного решения делается в контексте имеющейся инфо-среды, а если этого не удается, то выбирается случайно одна из инфо-функций.</li>
-<li><a href="../funcs/infoFunc3.htm">infoFunc3</a> - айти подходящий мент.автоматизм по опыту ментальных Правил</li>
-<li><a href="../funcs/infoFunc4.htm">infoFunc4</a> - анализ инфо стркутуры и др. информации по currentInfoStructId и выдача решения</li>
+<li><a href="../funcs/infoFunc3.htm">infoFunc3</a> - найти подходящий мент. автоматизм по опыту ментальных Правил</li>
+<li><a href="../funcs/infoFunc4.htm">infoFunc4</a> - анализ инфо структуры и др. информации по currentInfoStructId и выдача решения</li>
 <li><a href="../funcs/infoFunc5.htm">infoFunc5</a> - создать и запустить ментальный автоматизм по действию mImgID</li>
 <li><a href="../funcs/infoFunc6.htm">infoFunc6</a> - ПОДВЕРГНУТЬ СОМНЕНИЮ автоматизм, если нет опасности (не нужно реагировать аффектно) и ситуация важна</li>
 <li><a href="../funcs/infoFunc7.htm">infoFunc7</a> - создать и запустить ментальный автоматизм запуска моторного автоматизма по действию ActionsImageID</li>
