--- a/beast_scheme/package/psychic.htm
+++ b/beast_scheme/package/psychic.htm
@@ -11,14 +11,14 @@
 <h1 style='position:absolute;top:-10px;left:50%;transform: translate(-50%, 0);font-size:18px;'>Психика</h1>
 </div>
 
-Пакет psychic имеет множество подразделов, которые объеденены в один пакет только из-за огромных неудобств, создаваемых в языке golang отсутствием защиты от цикличности испорта типа Include Once (какой есть практически у всех нормальных языков).<br>
+Пакет psychic имеет множество подразделов, которые объединены в один пакет только из-за огромных неудобств, создаваемых в языке golang отсутствием защиты от цикличности импорта типа Include Once (какой есть практически у всех нормальных языков).<br>
 Поэтому условно разделим этот пакет на:<br>
 <li><a href="package/actions_image.htm">actions_image</a> - совокупные образы действий.</li>
 <li><a href="package/actions_images_mental.htm">actions_images_mental</a> - совокупные образы ментальных действий.</li>
 <li><a href="package/automatism_tree.htm">automatism_tree</a> - дерево автоматизмов.</li>
 <li><a href="package/automatizm.htm">automatizm</a> - автоматизмы.</li>
 <li><a href="package/base_state_image.htm">base_state_image</a> - Образ текущего состояния.</li>
-<li><a href="package/cerebellum.htm">cerebellum</a> - рефлексы мохжечка.</li>
+<li><a href="package/cerebellum.htm">cerebellum</a> - рефлексы мозжечка.</li>
 <li><a href="package/dominanta.htm">dominanta</a> - доминанта нерешенной проблемы.</li>
 <li><a href="package/emotions.htm">emotions</a> - эмоциональные контексты.</li>
 <li><a href="package/episodic_memory.htm">episodic_memory</a> - эпизодическая память.</li>
